# open-brain

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Caddyfile  DEPLOY.md  Dockerfile  HISTORY.md  IMPLEMENTATION_PLAN.md  Makefile  PROGRESS.md  README.md  alembic.ini  audit-report.md  backlog-ideas.md  backlog.md  crontab  dash-update-plan.md  docker-compose.yml  documentation.md  import-ai-memory.md  inspiration.html  manual.html  new-feature-implementation-plan.md  open-brain-implementation-plan.docx  presentation.html  pyproject.toml  start.sh  stop.sh  tech-debt.md  web-progress.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_content_hash.py  0003_new_modules.py  0004_pulse_modal_columns.py  0005_add_job_runs.py  0006_add_start_date.py  0007_add_todo_labels.py  0008_add_project_labels.py  0009_enable_rls_all_tables.py  0010_training_commitments.py  0011_aggregate_commitments.py  (+7 more)
cli/: ob.py
docs/: chat-implementation-plan.md  duplicate-situation.md  learning-import-template.md  learning-library-business-case.md  prompt-2-chat-page-v2.md  strava-integration-spec.md  todo-sync.md  voice-ios-shortcut.md  webapp-implementationplan.md
prompts/: aggregate-period-commitments.md  chat-frontend-session2.md  learning-library.md  mobile-viewport-safari-zoom-safe-area.md  pulse-memory-sync.md  rag-chat-ux-cleanup.md  signal-driven-morning-pulse.md  todo-edit-delete.md  training-commitments-v1-plan.md  training-commitments-v1.md  web-voice-unification-and-link-tab-removal.md
scripts/: backfill_pulse_memories.py  backfill_todo_memories.py  backup.sh  capture_claude_code.py  check_config.py  check_config_env.py  check_env_consistency.py  import_claude.py  import_claude_code.py  import_gemini.py  import_openai.py  restore.sh
src/: __init__.py  mcp_server.py
tests/: conftest.py  test_bot_modules.py  test_calendar.py  test_calendar_api.py  test_capture_claude_code.py  test_chat.py  test_cli.py  test_commitment_import.py  test_commitments.py  test_config.py  test_context_builder.py  test_cors.py  test_database.py  test_decisions.py  test_discord_bot.py  test_entities.py  test_extractor.py  test_importance.py  test_ingestion.py  test_integration.py  test_jobs_history.py  test_learning.py  test_learning_import.py  test_llm.py  test_mcp_server.py  test_memory_recent.py  test_models.py  test_ob_chat.py  test_pipeline.py  test_prevention_scripts.py  test_project_labels.py  test_project_labels_rename.py  test_pulse.py  test_pulse_signal_type_migration.py  test_pulse_signals_context.py  test_pulse_signals_detectors.py  test_pulse_signals_prompts.py  test_pulse_signals_ranker.py  test_pulse_sync.py  test_queue.py  (+15 more)
web/: Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
(+207 files in other folders)
